<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewDeliveryActivity">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/btn_logut_bg"
            android:text="@string/btnBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePicker"
            app:layout_constraintVertical_bias="0.216" />

        <CheckBox
            android:id="@+id/urgentCheckBox"
            android:layout_width="97dp"
            android:layout_height="32dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:text="@string/urgent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="129dp"
            android:layout_height="83dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/dueDateText"
            android:layout_width="97dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/dueDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poboxText" />

        <TextView
            android:id="@+id/claimantText"
            android:layout_width="97dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="100dp"
            android:text="@string/claimant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/claimantEditText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toEndOf="@+id/claimantText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="97dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/claimantText" />

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toEndOf="@+id/addressText"
            app:layout_constraintTop_toBottomOf="@+id/claimantEditText" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="97dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:text="@string/receiverName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressText" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toEndOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@+id/place_autocomplete_fragment" />

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="97dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toEndOf="@+id/phoneText"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <TextView
            android:id="@+id/poboxText"
            android:layout_width="97dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/pobox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneText" />

        <EditText
            android:id="@+id/poboxEditText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toEndOf="@+id/poboxText"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:background="@color/bg_main"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePicker"
            app:layout_constraintVertical_bias="0.301" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poboxEditText" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>