<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnViewDeliveries"
        android:layout_width="237dp"
        android:layout_height="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="252dp"
        android:background="@color/login_button_background"
        android:text="@string/viewDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViewUrgentDeliveries"
        android:layout_width="238dp"
        android:layout_height="66dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/login_button_background"
        android:text="@string/viewsUrgentDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewDeliveries" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--<Button
        android:id="@+id/btnNewDelivery"
        android:layout_width="238dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/login_button_background"
        android:text="@string/newDelivery"
        app:layout_constraintBottom_toTopOf="@+id/btnViewDeliveries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="100dp"
        android:text="@string/all_the_deliveries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewUrgentDeliveries" />

    <TextView
        android:id="@+id/allDeliveriesTextView"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btnViewUrgentDeliveries" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:text="מספר המשלוחים שנמסרו ליעדם:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
        android:id="@+id/deliveredDeliveriesTextView"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/allDeliveriesTextView" />


</android.support.constraint.ConstraintLayout>
